add parameters to the main, and fix the order of the parameter for ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,12 @@ INCLUDE(${VTK_USE_FILE})
 
 ADD_EXECUTABLE(PoissonReconstruction Example.cxx vtkPoissonReconstruction.cxx Factor.cpp Geometry.cpp MarchingCubes.cpp Time.cpp MultiGridOctest.cpp MultiGridOctreeData.cpp)
 TARGET_LINK_LIBRARIES(PoissonReconstruction vtkHybrid)
+
+ADD_TEST( PoissonReconstructionTest 
+  ${PoissonReconstruction_BINARY_DIR}/PoissonReconstruction 
+  ${PoissonReconstruction_SOURCE_DIR}/data/horsePoints.vtp
+  5 
+  temp.vtp 
+)
+
+INCLUDE( CTest )
