1 linking error on Mac: ld: duplicate symbol getres(unsigned int, unsigned long*, unsigned long*)in CMakeFiles/PoissonReconstruction.dir/MultiGridOctest.cpp.o and CMakeFiles/PoissonReconstruction.dir/vtkPoissonReconstruction.cxx.o

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT(PoissonReconstruction)
 FIND_PACKAGE(VTK REQUIRED)
 INCLUDE(${VTK_USE_FILE})
 
-ADD_EXECUTABLE(PoissonReconstruction Example.cxx vtkPoissonReconstruction.cxx Factor.cpp Geometry.cpp MarchingCubes.cpp Time.cpp MultiGridOctest.cpp MultiGridOctreeData.cpp)
+ADD_EXECUTABLE(PoissonReconstruction Example.cxx vtkPoissonReconstruction.cxx Factor.cpp Geometry.cpp MarchingCubes.cpp Time.cpp MultiGridOctest.cpp MultiGridOctreeData.cpp MemoryUsage.h )
 TARGET_LINK_LIBRARIES(PoissonReconstruction vtkHybrid)
 
 ADD_TEST( PoissonReconstructionTest 
