--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,16 @@ PROJECT(PoissonReconstruction)
 FIND_PACKAGE(VTK REQUIRED)
 INCLUDE(${VTK_USE_FILE})
 
-ADD_EXECUTABLE(PoissonReconstruction Example.cxx vtkPoissonReconstruction.cxx Factor.cpp Geometry.cpp MarchingCubes.cpp Time.cpp MultiGridOctest.cpp MultiGridOctreeData.cpp MemoryUsage.h )
+
+SET(BUILD_PARAVIEW_PLUGIN OFF CACHE BOOL "Build Paraview plugin?")
+
+if(BUILD_PARAVIEW_PLUGIN)
+SUBDIRS(plugin)
+endif(BUILD_PARAVIEW_PLUGIN)
+
+ADD_EXECUTABLE(PoissonReconstruction Example.cxx vtkPoissonReconstruction.cxx Factor.cpp Geometry.cpp MarchingCubes.cpp Time.cpp MultiGridOctest.cpp MultiGridOctreeData.cpp 
+#MemoryUsage.h 
+)
 TARGET_LINK_LIBRARIES(PoissonReconstruction vtkHybrid)
 
 ADD_TEST( PoissonReconstructionTest 
