--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -6,6 +6,6 @@ INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ../)
 ADD_PARAVIEW_PLUGIN(PoissonReconstructionPlugin "1.0"
   SERVER_MANAGER_XML ../vtkPoissonReconstruction.xml
 SERVER_MANAGER_SOURCES ../vtkPoissonReconstruction.cxx  
-SERVER_SOURCES ../Factor.cpp ../Geometry.cpp ../MarchingCubes.cpp ../Time.cpp ../MultiGridOctest.cpp ../MultiGridOctreeData.cpp 
+SERVER_SOURCES ../Factor.cpp ../Geometry.cpp ../MarchingCubes.cpp ../MultiGridOctest.cpp ../MultiGridOctreeData.cpp 
 )
 
