STYLE: change projects directories configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,44 @@
 cmake_minimum_required(VERSION 2.6)
 
-PROJECT(PoissonReconstruction)
+project(PoissonReconstruction)
 
-FIND_PACKAGE(VTK REQUIRED)
-INCLUDE(${VTK_USE_FILE})
+find_package(VTK REQUIRED)
+include(${VTK_USE_FILE})
 
+if( ${VTK_BUILD_SHARED_LIBS} )
+  set( SHARED_LIBS "SHARED" )
+else(${VTK_BUILD_SHARED_LIBS} )
+  set( SHARED_LIBS "STATIC" )
+endif(${VTK_BUILD_SHARED_LIBS} )
 
-SET(BUILD_PARAVIEW_PLUGIN OFF CACHE BOOL "Build Paraview plugin?")
-
-if(BUILD_PARAVIEW_PLUGIN)
-SUBDIRS(plugin)
-endif(BUILD_PARAVIEW_PLUGIN)
-
-ADD_EXECUTABLE(PoissonReconstruction Example.cxx vtkPoissonReconstruction.cxx Factor.cpp Geometry.cpp MarchingCubes.cpp MultiGridOctest.cpp MultiGridOctreeData.cpp )
-TARGET_LINK_LIBRARIES(PoissonReconstruction vtkHybrid)
-
-ADD_TEST( PoissonReconstructionTest 
-  ${PoissonReconstruction_BINARY_DIR}/PoissonReconstruction 
-  ${PoissonReconstruction_SOURCE_DIR}/data/horsePoints.vtp
-  5 
-  temp.vtp 
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY
+  ${PoissonReconstruction_BINARY_DIR}/bin
 )
 
-INCLUDE( CTest )
+set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY
+  ${PoissonReconstruction_BINARY_DIR}/lib
+)
+
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY
+  ${PoissonReconstruction_BINARY_DIR}/lib
+)
+
+include_directories( ${PoissonReconstruction_SOURCE_DIR}/source )
+
+add_subdirectory(source)
+
+add_subdirectory(example)
+
+set(BUILD_PARAVIEW_PLUGIN OFF CACHE BOOL "Build Paraview plugin?")
+
+if(BUILD_PARAVIEW_PLUGIN)
+  add_subdirectory(plugin)
+endif(BUILD_PARAVIEW_PLUGIN)
+
+option( BUILD_DOCUMENTATION "Build Doxygen Documentation" OFF )
+
+if( BUILD_DOCUMENTATION )
+  add_subdirectory( documentation )
+endif( BUILD_DOCUMENTATION )
+
+include( CTest )
