--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,3 +1,9 @@
+configure_file(
+  ${PoissonReconstruction_SOURCE_DIR}/source/vtkPoissonReconstructionConfigure.h.in
+  ${PoissonReconstruction_BINARY_DIR}/vtkPoissonReconstructionConfigure.h
+  @ONLY IMMEDIATE
+)
+
 add_library( vtkPoissonReconstruction
   ${SHARED_LIBS}
   vtkPoissonReconstruction.cxx
