cache cmake variable for *_output_dir
When including this project into another, it is now possible to set
*_output_dir globally

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,14 +15,17 @@ endif(${VTK_BUILD_SHARED_LIBS} MATCHES ON )
 
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY
   ${PoissonReconstruction_BINARY_DIR}/bin
+  CACHE PATH "path for all executables"
 )
 
 set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY
   ${PoissonReconstruction_BINARY_DIR}/lib
+  CACHE PATH "path for all libraries"
 )
 
 SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY
   ${PoissonReconstruction_BINARY_DIR}/lib
+  CACHE PATH "path for all libraries"
 )
 
 include_directories(
